FUTBOL BRASIL: FlowType, Thumbnail, Content Img, Logo Tim

--- a/FutbolBrasil/futbol-brasil/app/modules/core/views/language-selection.html
+++ b/FutbolBrasil/futbol-brasil/app/modules/core/views/language-selection.html
@@ -6,7 +6,7 @@
                     <input type="text" class="form-control"
                            placeholder="{{'SETTINGS.LANGUAGE_SEARCH_HELPER' | translate}}" ng-model="searchQuery">
                     <span class="input-group-addon">
-                        <i class="icon mdi-action-search" style="font-size:1.8em;"></i>
+                        <i class="icon mdi-action-search"></i>
                     </span>
                 </div>
             </div>
