--- a/FutbolBrasil/futbol-brasil/app/modules/core/views/points.html
+++ b/FutbolBrasil/futbol-brasil/app/modules/core/views/points.html
@@ -10,7 +10,7 @@
         <div class="scroller" ng-style="getWidth()">
             <div class="row">
                 <div class="col-xs-12">
-                    <table class="table">
+                    <table class="table h-table">
                         <thead>
                             <tr class="h-header green">
                                 <th colspan="6" >
