--- a/FutbolBrasil/futbol-brasil/app/modules/core/views/scorers.html
+++ b/FutbolBrasil/futbol-brasil/app/modules/core/views/scorers.html
@@ -21,7 +21,7 @@
                             <div class="scroller">
                                 <div class="container">
                                     <div class="col-xs-12" >
-                                        <table  ng-show="league.scorers" class="table">
+                                        <table  ng-show="league.scorers" class="table h-table">
                                             <thead>
                                             <tr>
                                                 <th class="h-header yellow" translate style="text-align: left;">SCORERS.PLAYER_NAME_LABEL</th>
