--- a/FutbolBrasil/futbol-brasil/app/modules/core/views/settings.html
+++ b/FutbolBrasil/futbol-brasil/app/modules/core/views/settings.html
@@ -67,7 +67,7 @@
                                                ng-model="toggles.bets" ng-click="toggleBets()">
                                         <div class="toggle"></div>
                                     </label>
-                                    <span translate>SETTINGS.TOGGLE.BETS</span>
+                                    <span class="h-name-push" translate>SETTINGS.TOGGLE.BETS</span>
                                 </div>
                             </div>
                         </div>
@@ -80,7 +80,7 @@
                                                ng-click="toggleNews()">
                                         <div class="toggle"></div>
                                     </label>
-                                    <span translate>SETTINGS.TOGGLE.NEWS</span>
+                                    <span class="h-name-push" translate>SETTINGS.TOGGLE.NEWS</span>
                                 </div>
                             </div>
                         </div>
@@ -93,7 +93,7 @@
                                                ng-click="toggleMtm()">
                                         <div class="toggle"></div>
                                     </label>
-                                    <span translate>SETTINGS.TOGGLE.MTM</span>
+                                    <span class="h-name-push" translate>SETTINGS.TOGGLE.MTM</span>
                                 </div>
                             </div>
                         </div>
@@ -113,7 +113,7 @@
                             <i class="lang-tag" style="padding:8px;">{{lang.short_name}}</i>
                         </div>
                         <div class="col-xs-6">
-                            <h6 class="lang-name">{{lang.translation}}</h6>
+                            <h4 class="lang-name">{{lang.translation}}</h4>
                         </div>
                         <div class="col-xs-4">
                             <button class="btn btn-success text-center" ng-click="selectLanguage()">
