--- a/FutbolBrasil/futbol-brasil/app/modules/core/views/leaderboard.html
+++ b/FutbolBrasil/futbol-brasil/app/modules/core/views/leaderboard.html
@@ -38,7 +38,7 @@
                         <div class="scroller" style="position: relative;">
                           <div class="row">
                             <div class="col-xs-12" >
-                              <table class="table">
+                              <table class="table h-table">
                                 <thead>
                                 <tr>
                                   <th class="h-header yellow">##</th>
