--- a/FutbolBrasil/futbol-brasil/app/modules/core/views/login.html
+++ b/FutbolBrasil/futbol-brasil/app/modules/core/views/login.html
@@ -5,7 +5,7 @@
             <div class="col-xs-12">
                 <div class="well text-center">
 
-                    <img class="h-logo login" src="img/tim-01.svg"  onerror="this.src='img/tim-01.png'" >
+                    <!--img class="h-logo login" src="img/tim-01.svg"  onerror="this.src='img/tim-01.png'" -->
 
                     <form name="msisdnForm" ng-submit="doMsisdnLogin()" class="form-horizontal">
                         <fieldset>
@@ -53,7 +53,7 @@
                     <div class="list-group">
                         <a ui-sref="remind" class="list-group-item list-item">
                             <div class="col-xs-10">
-                                <span translate>LOGIN.REMIND_LABEL</span>
+                                <span class="h-login-button" translate>LOGIN.REMIND_LABEL</span>
                             </div>
                             <div class="col-xs-2 text-right">
                                 <span><i class="mdi-navigation-chevron-right"></i></span>
@@ -71,7 +71,7 @@
                         <div class="full-separator"></div>
                         <a ui-sref="tutorial" class="list-group-item list-item">
                             <div class="col-xs-10">
-                                <span translate>LOGIN.TUTORIAL_LABEL</span>
+                                <span class="h-login-button" translate>LOGIN.TUTORIAL_LABEL</span>
                             </div>
                             <div class="col-xs-2 text-right">
                                 <span><i class="mdi-navigation-chevron-right"></i></span>
@@ -80,7 +80,7 @@
                         <div class="full-separator"></div>
                         <a ui-sref="terms" class="list-group-item list-item">
                           <div class="col-xs-10">
-                            <span translate>LOGIN.TERMS_LABEL</span>
+                            <span class="h-login-button" translate>LOGIN.TERMS_LABEL</span>
                           </div>
                           <div class="col-xs-2 text-right">
                             <span><i class="mdi-navigation-chevron-right"></i></span>
