--- a/FutbolBrasil/futbol-brasil/app/modules/core/views/remind.html
+++ b/FutbolBrasil/futbol-brasil/app/modules/core/views/remind.html
@@ -5,8 +5,8 @@
                 <div class="col-xs-12">
                     <div class="well">
                         <h3 translate>LOGIN.REMIND.HERO.TITLE</h3>
-                        <p translate>LOGIN.REMIND.HERO.MESSAGE</p>
-                        <small class="text-muted" translate>LOGIN.REMIND.HERO.SMALL_PRINT</small>
+                        <h5 translate>LOGIN.REMIND.HERO.MESSAGE</h5>
+                        <h6 class="text-muted" translate>LOGIN.REMIND.HERO.SMALL_PRINT</h6>
                     </div>
                 </div>
             </div>
@@ -50,7 +50,7 @@
                         <div class="list-group">
                             <a ui-sref="terms" class="list-group-item list-item">
                                 <div class="col-xs-10">
-                                    <span translate>LOGIN.TERMS_LABEL</span>
+                                    <span class="h-login-button" translate>LOGIN.TERMS_LABEL</span>
                                 </div>
                                 <div class="col-xs-2 text-right">
                                     <span><i class="mdi-navigation-chevron-right"></i></span>
