--- a/FutbolBrasil/futbol-brasil/app/modules/core/views/standings.html
+++ b/FutbolBrasil/futbol-brasil/app/modules/core/views/standings.html
@@ -86,27 +86,39 @@
                     <table class="table">
                       <thead>
                       <tr>
-                        <th colspan="8" class="h-header yellow">
+                        <th colspan="8" class="h-header light-blue">
                           <span>{{fromNow(ranking.date)}}</span>
                         </th>
                       </tr>
                       </thead>
                       <tbody>
-                      <tr>
-                        <td class="col-xs-4">
-                          <span ng-bind="ranking.homeTeam.name"></span>
+                      <tr class="h-match">
+                        <td class="col-xs-4" style="width: 33% !important; vertical-align:middle;">
+                          <!--span ng-bind="ranking.homeTeam.name"></span>
                           <br/>
-                          <span ng-bind="ranking.home_team_goals"></span>
+                          <span ng-bind="ranking.home_team_goals"></span-->
+
+                          <span ng-bind="ranking.homeTeam.name" class="h-name-team"></span>
+                          <span ng-bind="ranking.home_team_goals" class="h-goal-team"></span>
+
+
                         </td>
-                        <td class="col-xs-4">
-                          <span>VS</span>
+                        <td class="col-xs-4" style="width: 33% !important; vertical-align:middle;">
+                          <!--span>VS</span>
                           <br/>
-                          <span ng-bind="ranking.status.name"></span>
+                          <span ng-bind="ranking.status.name"></span-->
+
+                                  <span class="status _{{ranking.status.id_status}}">
+                                    {{ ranking.status.name | translate}}
+                                  </span>
+
                         </td>
-                        <td class="col-xs-4">
-                          <span ng-bind="ranking.awayTeam.name"></span>
+                        <td class="col-xs-4" style="width: 33% !important; vertical-align:middle;">
+                          <!--span ng-bind="ranking.awayTeam.name"></span>
                           <br/>
-                          <span ng-bind="ranking.away_team_goals"></span>
+                          <span ng-bind="ranking.away_team_goals"></span-->
+                          <span ng-bind="ranking.awayTeam.name" class="h-name-team"></span>
+                          <span ng-bind="ranking.away_team_goals" class="h-goal-team"></span>
                         </td>
                       </tr>
 
@@ -119,7 +131,7 @@
               <div ng-if="!item.isTree">
                 <div class="row" ng-repeat="rankings in item.ranking">
                   <div class="col-xs-12">
-                    <table class="table">
+                    <table class="table h-table">
                       <thead>
                       <tr>
                         <th colspan="8" class="h-header green">
