--- a/FutbolBrasil/futbol-brasil/app/modules/core/views/team-selection.html
+++ b/FutbolBrasil/futbol-brasil/app/modules/core/views/team-selection.html
@@ -8,7 +8,7 @@
                            placeholder="{{'SETTINGS.TEAM_SEARCH_HELPER' | translate}}"
                            ng-model="searchQuery">
                     <span class="input-group-addon">
-                        <i class="icon mdi-action-search" style="font-size:1.8em;"></i>
+                        <i class="icon mdi-action-search" ></i>
                     </span>
                 </div>
             </div>
