--- a/FutbolBrasil/futbol-brasil/app/modules/core/views/templates/menu-sub-item.html
+++ b/FutbolBrasil/futbol-brasil/app/modules/core/views/templates/menu-sub-item.html
@@ -1,7 +1,7 @@
 <div ui-sref="{{section}}" class="row content-sub-menu">
   <div class="col-xs-12">
     <div class="col-xs-2"></div>
-    <div class="col-xs-8" ng-transclude>
+    <div class="col-xs-8 h-title" ng-transclude>
     </div>
   </div>
 </div>
