--- a/FutbolBrasil/futbol-brasil/app/modules/core/views/standings.html
+++ b/FutbolBrasil/futbol-brasil/app/modules/core/views/standings.html
@@ -5,12 +5,12 @@
         <div class="container">
 
           <div class="row h-list" ng-show="hasCompetitions" >
-            <div class="col-xs-12"
+            <div class="col-xs-12 h-ellipsis-truncate"
                  ng-repeat="competition in item.competitions"
                  ng-click="showContentPhases(competition)"
                  data-news="{{ competition.id_competitions }}" on-last-repeat>
               <i class="mdi-action-bookmark h-headline" ></i>
-              <span class="h-headline">{{competition.name}}</span>
+              <span class="h-headline ">{{competition.name}}</span>
             </div>
 
           </div>
@@ -37,13 +37,13 @@
         <div class="container">
 
           <div class="row">
-            <div class="col-xs-12 h-header green">
+            <div class="col-xs-12 h-header green h-ellipsis-truncate">
               <span class="h-headline" ng-bind="item.competition.name"></span>
             </div>
           </div>
 
           <div class="row h-list" ng-show="hasPhases">
-            <div class="col-xs-12" ng-repeat="phase in item.phases"
+            <div class="col-xs-12 h-ellipsis-truncate" ng-repeat="phase in item.phases"
                  ng-click="showContentRanking(item.competition.id_competitions
                         , phase.id_phases)">
               <i class="mdi-action-bookmark h-headline"></i>
@@ -72,7 +72,7 @@
         <div class="container">
 
           <div class="row">
-            <div class="col-xs-12 h-header red">
+            <div class="col-xs-12 h-header red h-ellipsis-truncate">
               <span ng-bind="item.phase.global_name"></span>
             </div>
           </div>
