--- a/FutbolBrasil/futbol-brasil/app/modules/core/views/standings.html
+++ b/FutbolBrasil/futbol-brasil/app/modules/core/views/standings.html
@@ -109,7 +109,7 @@
                           <span ng-bind="ranking.status.name"></span-->
 
                                   <span class="status _{{ranking.status.id_status}}" >
-                                    {{ranking.status.name}}
+                                    {{ranking.status.name | translate}}
                                   </span>
 
                         </td>
