FUTBOL BRASIL: Lógica de tutorial

--- a/FutbolBrasil/futbol-brasil/app/modules/core/views/login.html
+++ b/FutbolBrasil/futbol-brasil/app/modules/core/views/login.html
@@ -73,7 +73,7 @@
                             </div>
                         </a-->
                         <div class="full-separator"></div>
-                        <a ui-sref="tutorial" class="list-group-item list-item">
+                        <a ui-sref="how" class="list-group-item list-item">
                             <div class="col-xs-10">
                                 <span class="h-login-button" translate>LOGIN.TUTORIAL_LABEL</span>
                             </div>
