--- a/FutbolBrasil/futbol-brasil/app/styles/default.css
+++ b/FutbolBrasil/futbol-brasil/app/styles/default.css
@@ -211,7 +211,7 @@ div.header .right {
     z-index: 8;
 }
 
-.loading {
+/*.loading {
     position: absolute;
     margin: 0 auto;
     text-align:center;
@@ -222,7 +222,7 @@ div.header .right {
     bottom: 0;
     right: 0;
     z-index: 8;
-}
+}*/
 
 
 body.content-match .competition,
@@ -288,7 +288,7 @@ div.header .right {
     z-index: 9;
 }
 
-
+/*
 .loading {
     position: absolute;
     margin: 0 auto;
@@ -300,7 +300,7 @@ div.header .right {
     bottom: 0;
     right: 0;
     z-index: 9;
-}
+}*/
 
 #wrapperH {
     position: absolute;
@@ -1116,6 +1116,13 @@ h6.team-name {
     .h-name-push {
       font-size:1.6em;
     }
+
+    .content-tutorial #wrapperH li {
+      background-color: rgba(0,0,0,0.7) !important;
+      color: #ffffff  !important;
+      border: 0 !important;
+    }
+
 
     /*</v2>*/
 
