--- a/FutbolBrasil/futbol-brasil/app/modules/core/views/tutorial.html
+++ b/FutbolBrasil/futbol-brasil/app/modules/core/views/tutorial.html
@@ -15,11 +15,20 @@
       </li>
       <li ng-style="getWidth()">
         <h5>Example 5</h5>
+
       </li>
       <li ng-style="getWidth()">
         <h6>Example 6</h6>
-        <a ng-click="goToIndex()" class="btn btn-primary btn-lg">{{'READY' | translate}}</a>
       </li>
     </ul>
   </div>
+
+  <div style="position:absolute; bottom:0; z-index: 25; left: 0; right:0; text-align:center; ">
+    <a ng-click="goToIndex()" class="btn btn-primary btn-lg" >{{'READY' | translate}}</a>
+  </div>
+
+  <div style="position:absolute; bottom:0; z-index: 25; left: 0; right:0; text-align:center; ">
+
+  </div>
+
 </div>
