FUTBOL-BRASIL: Mensaje en términos y condiciones

--- a/FutbolBrasil/futbol-brasil/app/modules/core/views/login.html
+++ b/FutbolBrasil/futbol-brasil/app/modules/core/views/login.html
@@ -72,7 +72,7 @@
                                 <span><i class="mdi-navigation-chevron-right"></i></span>
                             </div>
                         </a-->
-                        <div class="full-separator"></div>
+                        <!--div class="full-separator"></div>
                         <a ui-sref="how" class="list-group-item list-item">
                             <div class="col-xs-10">
                                 <span class="h-login-button" translate>LOGIN.TUTORIAL_LABEL</span>
@@ -80,7 +80,7 @@
                             <div class="col-xs-2 text-right">
                                 <span><i class="mdi-navigation-chevron-right"></i></span>
                             </div>
-                        </a>
+                        </a-->
                         <div class="full-separator"></div>
                         <a ui-sref="terms" class="list-group-item list-item">
                           <div class="col-xs-10">
