--- a/FutbolBrasil/futbol-brasil/app/modules/core/views/terms.html
+++ b/FutbolBrasil/futbol-brasil/app/modules/core/views/terms.html
@@ -2,6 +2,7 @@
   <div class="scroller">
     <div class="row">
       <div id="load" class="col-xs-12">
+        <p ng-bind="message" style="font-size:2.2em; padding:15px;"></p>
       </div>
     </div>
   </div>
