--- a/FutbolBrasil/futbol-brasil/app/modules/core/views/templates/menu.html
+++ b/FutbolBrasil/futbol-brasil/app/modules/core/views/templates/menu.html
@@ -1,4 +1,4 @@
-<div id="wrapperM" class="page left">
+<div id="wrapperM"  class="page" style="left: -100%;">
     <div class="scroller">
         <div class="container-fluid">
             <div ng-transclude></div>
