--- a/FutbolBrasil/futbol-brasil/app/styles/default.css
+++ b/FutbolBrasil/futbol-brasil/app/styles/default.css
@@ -1119,7 +1119,41 @@ h6.team-name {
       border: 0 !important;
     }
 
+    .h-img-tutorial {
+      position:relative;
+      width:auto;
+      max-width:720px;
+      height:100%;
+      max-height:1280px;
+      text-align:center;
+      top:0;
+      bottom:0;
+      left:0;
+      right:0;
+    }
 
+    .content-tutorial footer {
+      display:none;
+    }
+
+    .content-tutorial #wrapperH {
+      bottom: 0;
+    }
+
+    .content-tutorial .mdi-toggle-radio-button-off,
+    .content-tutorial .mdi-toggle-radio-button-on {
+      color: #ffffff;
+    }
+
+    .content-tutorial .mdi-navigation-chevron-left,
+    .content-tutorial .mdi-navigation-chevron-right {
+      color: #ffffff;
+      font-size:5em;
+    }
+
+    .hidden {
+      display:none;
+    }
     /*</v2>*/
 
 
