--- a/FutbolBrasil/futbol-brasil/app/styles/default.css
+++ b/FutbolBrasil/futbol-brasil/app/styles/default.css
@@ -1123,10 +1123,10 @@ h6.team-name {
       position:relative;
       width:auto;
       max-width:720px;
-      height:100%;
+      height:80%;
       max-height:1280px;
       text-align:center;
-      top:0;
+      top:20px;
       bottom:0;
       left:0;
       right:0;
