--- a/FutbolBrasil/futbol-brasil/app/modules/core/views/tutorial.html
+++ b/FutbolBrasil/futbol-brasil/app/modules/core/views/tutorial.html
@@ -34,16 +34,14 @@
 
 </div>
 
-<div style="position:absolute; bottom:50%; left: 0; z-index: 25;" ng-class="getHiddenClass(0)" ng-click="prevPage()">
-  <a class=" mdi-navigation-chevron-left" ></a>
+<div style="position:absolute; bottom:50%; left: 0; z-index: 25;" ng-class="getHiddenClass(0)" >
+  <i class=" mdi-navigation-chevron-left" ng-click="prevPage()"></i>
 </div>
 
-<div style="position:absolute; bottom:50%; right:0; z-index: 25; "  ng-class="getHiddenClass(5)" ng-click="nextPage()">
-  <a class="mdi-navigation-chevron-right"></a>
+<div style="position:absolute; bottom:50%; right:0; z-index: 25; "  ng-class="getHiddenClass(5)"  >
+  <i class="mdi-navigation-chevron-right" ng-click="nextPage()"></i>
 </div>
 
 <div style="position:absolute; bottom:10px; right:10px; z-index: 25;  text-align:right; ">
-  <a  ng-click="goToIndex()">
-    <img src="img/tutorial/{{language}}/skip.png" style="width:40%; height:auto;"  onerror="this.src='img/tutorial/pt/skip.png'"  >
-  </a>
+  <img src="img/tutorial/{{language}}/skip.png" style="width:40%; height:auto;"  onerror="this.src='img/tutorial/pt/skip.png'"   ng-click="goToIndex()">
 </div>
